--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+﻿@import "tailwindcss";
+
+@theme {
+  --font-family-sans: Inter, sans-serif;
+  
+  --color-slate-900: #0f172a;
+  --color-slate-200: #e2e8f0;
+}
